--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
 </head>
 <body>
     <div class="container">
-        <h1>🎂 Happy Birthday, Nanu! 🎉</h1>
+        <h1>🎂 Happy Birthday, my friend! 🎉</h1>
         <p class="message">Wishing you a day filled with love, joy, and laughter! 💖</p>
         <button id="surpriseBtn">Click for a Surprise!</button>
         <div id="surpriseMessage" class="hidden">
-            <h2>🎈 You're the best Nanu ever! 🎈 </h2><br>
+            <h2>🎈 You're the best friend
+            ever! 🎈 </h2><br>
             <h2>🎁 May all your dreams come true! ✨</h2>
         </div>
     </div>
@@ -20,3 +21,4 @@
     <script src="bday.js"></script>
 </body>
 </html>
+
